--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ url: "http://hailerity.com" # the base hostname & protocol for your site, e.g. h
 twitter_username: hailerity
 github_username:  hailerity
 
+google_analytics: true
+
 # Build settings
 markdown: kramdown
 # theme: minima
